added svg file and sorted them in an array called projects in main js. commented out portfolio section in html for now until svgs are complete. will remove when complete

--- a/index.html
+++ b/index.html
@@ -21,100 +21,28 @@
                     <h2>Full-Stack Software Developer</h2>
                     <nav>
                         <ul>
-                            <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#about">About</a></li>
+                            <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                     </nav>
-                </div>
-                <div class="scroll-down">
-                    <a class="arrow-container" href="#portfolio">
-                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>
-                    </a>
-                </div>
-            </header>
-
-            <section id="portfolio" class="parent">
-                <div class="container container-background p-4 mb-5">
-                    <h1 class="text-center mb-4">Portfolio</h1>
-                    <div class="row portfolio-items-container">
-                        <!-- Portfolio item 1 -->
-                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
-                            <article class="item">
-                                <h3>Sandlot Connect</h3>
-                                <div class="h-100 pb-5">
-                                    <a href="#" class="image">
-                                        <img class="h-100" src="assets/images/sandlot_connect.JPG"
-                                             alt="Sandlot Connect Capstone Project"></a>
-                                </div>
-                                <!-- Hidden/click to show -->
-                                <div class="portfolio-info" style="display:none;">
-                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
-                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
-                                    saepe temporibus veniam. Consectetur dolores in repellat?
-                                    <br>
-                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
-                                </div>
-                            </article>
-                        </div>
-                        <!-- Portfolio item 2 -->
-                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
-                            <article class="item">
-                                <h3>Movie Project</h3>
-                                <div class="h-100 pb-5">
-                                    <a href="#" class="image">
-                                        <img class="h-100" src="assets/images/movie_project.jpeg"
-                                             alt="Movie Project Pair Programming"></a>
-                                </div>
-                                <!-- Hidden/click to show -->
-                                <div class="portfolio-info" style="display:none;">
-                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
-                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
-                                    saepe temporibus veniam. Consectetur dolores in repellat?
-                                    <br>
-                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
-                                </div>
-                            </article>
-                        </div>
-                        <!-- Portfolio item 3 -->
-                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">
-                            <article class="item">
-                                <h3>Weather Map</h3>
-                                <div class="h-100 pb-5">
-                                    <a href="#" class="image">
-                                        <img class="h-100" src="assets/images/weather_map.JPG"
-                                             alt="Weather Map Solo Project"></a>
-                                </div>
-                                <!-- Hidden/click to show -->
-                                <div class="portfolio-info" style="display:none;">
-                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti earum esse
-                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus
-                                    saepe temporibus veniam. Consectetur dolores in repellat?
-                                    <br>
-                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat provident quas quasi quidem quod reiciendis veniam. Odio, vitae.
-                                </div>
-                            </article>
-                        </div>
-                    </div>
                 </div>
                 <div class="scroll-down">
                     <a class="arrow-container" href="#about">
                         <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>
                     </a>
                 </div>
-            </section>
+            </header>
 
             <section id="about" class="parent mb-5">
                 <div class="container container-background p-4 mb-5">
                     <h1 class="text-center mb-4">About Me</h1>
                     <p class="text-center">Hi, I'm Shawn Wilson.</p>
-                    <p>
-                        As a Full-Stack Software Developer and Army veteran, I bring a unique perspective and skill set
-                        to every project I work on. My passion for technology is matched by my willingness to take on
-                        new challenges and learn new technologies. In my portfolio, you can see some of the diverse
-                        projects I've developed using a variety of technologies. If you're interested in learning more
-                        about my background and experience, please visit the contact section. I'm excited to connect
-                        with potential employers and explore opportunities to collaborate on innovative projects.
+                    <p class="indent">
+                        As a Software Developer, I'm always eager to learn and take on new challenges. I have a diverse background that has shaped my passion for technology and my approach to problem-solving. Before embarking on my career in software development, I worked as a pharmacy technician in healthcare, which instilled in me the importance of precision, attention to detail, and patient care. While working in healthcare, I pursued my degree in information technology and continued my studies after enlisting in the military.
+                    </p>
+                    <p class="indent">
+                        After completing my service, I devoted myself to completing my degree in information technology and honing my skills in programming by attending a coding bootcamp. In my portfolio, you can see some of the exciting projects I've created using a variety of technologies. I pride myself on my ability to learn quickly, adapt to new environments, and work collaboratively to create innovative solutions. If you're interested in learning more about my background and experience, please visit the contact section. As someone who values collaboration, communication, and attention to detail, I'm excited to connect with employers who share these values.
                     </p>
                     <div class="icon-container">
                         <i class="fab fa-java icon" title="Java" data-bs-toggle="tooltip"
@@ -139,18 +67,116 @@
                            data-bs-placement="bottom"></i>
                     </div>
                 </div>
-                <div class="scroll-down">
-                    <a class="arrow-container" href="#contact">
-                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>
-                    </a>
-                </div>
+<!--                <div class="scroll-down">-->
+<!--                    <a class="arrow-container" href="#contact">-->
+<!--                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>-->
+<!--                    </a>-->
+<!--                </div>-->
             </section>
+
+<!--            <section id="portfolio" class="parent">-->
+<!--                <div class="container container-background p-4 mb-5">-->
+<!--                    <h1 class="text-center mb-4">Portfolio</h1>-->
+<!--                    <div class="row portfolio-items-container">-->
+<!--                        &lt;!&ndash; Portfolio item 1 &ndash;&gt;-->
+<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
+<!--                            <article class="item">-->
+<!--                                <h3>Sandlot Connect</h3>-->
+<!--                                <div class="h-100 pb-5">-->
+<!--                                    <a href="#" class="image">-->
+<!--                                        <img class="h-100" src="assets/images/sandlot_connect.JPG"-->
+<!--                                             alt="Sandlot Connect Capstone Project"></a>-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
+<!--                                <div class="portfolio-info" style="display:none;">-->
+<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
+<!--                                    earum esse-->
+<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
+<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
+<!--                                    <br>-->
+<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
+<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
+<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
+<!--                                </div>-->
+<!--                            </article>-->
+<!--                        </div>-->
+<!--                        &lt;!&ndash; Portfolio item 2 &ndash;&gt;-->
+<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
+<!--                            <article class="item">-->
+<!--                                <h3>Movie Project</h3>-->
+<!--                                <div class="h-100 pb-5">-->
+<!--                                    <a href="#" class="image">-->
+<!--                                        <img class="h-100" src="assets/images/movie_project.jpeg"-->
+<!--                                             alt="Movie Project Pair Programming"></a>-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
+<!--                                <div class="portfolio-info" style="display:none;">-->
+<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
+<!--                                    earum esse-->
+<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
+<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
+<!--                                    <br>-->
+<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
+<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
+<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
+<!--                                </div>-->
+<!--                            </article>-->
+<!--                        </div>-->
+<!--                        &lt;!&ndash; Portfolio item 3 &ndash;&gt;-->
+<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
+<!--                            <article class="item">-->
+<!--                                <h3>Weather Map</h3>-->
+<!--                                <div class="h-100 pb-5">-->
+<!--                                    <a href="#" class="image">-->
+<!--                                        <img class="h-100" src="assets/images/weather_map.JPG"-->
+<!--                                             alt="Weather Map Solo Project"></a>-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
+<!--                                <div class="portfolio-info" style="display:none;">-->
+<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
+<!--                                    earum esse-->
+<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
+<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
+<!--                                    <br>-->
+<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
+<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
+<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
+<!--                                </div>-->
+<!--                            </article>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="scroll-down">-->
+<!--                    <a class="arrow-container" href="#about">-->
+<!--                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--            </section>-->
+
+            <div class="portfolio-container">
+                <ul>
+                    <!-- Portfolio Item 1 -->
+                    <li class="svg-container">
+<!--                        sandlot connect svg here-->
+                        <p>Project Name: Sandlot Connect
+
+                            Sandlot Connect is a social media platform inspired by the grassroots resurgence of sandlot baseball across Texas and beyond. Within this web application, users can create a new baseball team or request to join an existing team. When a user creates a new team they have access to requests and can approve or dismiss requests to join the team. Once on a team, members have a private space where they can make a post and communicate with group members. The application is built using Java and Spring Boot on the back-end, with Thymeleaf for the front-end.</p>
+                    </li>
+                    <!-- Portfolio Item 2 -->
+                    <li class="svg-container">
+<!--                        movie project svg here-->
+                    </li>
+                    <!-- Portfolio Item 3 -->
+                    <li class="svg-container">
+<!--                        weather map svg here-->
+                    </li>
+                </ul>
+            </div>
 
             <section id="contact" class="parent" style="min-height: 95vh;">
                 <div class="container container-background p-4">
                     <h1 class="text-center mb-4">Contact</h1>
-                    <p>You can visit my social links below to learn more about me. Message me directly by clicking the
-                        red message button icon on the bottom right of the screen.</p>
+                    <p>Please reach out to establish a professional connection with me! My most relevant social links are listed below.</p>
                     <div class="icon-container">
                         <a class="text-white" href="https://www.linkedin.com/in/shawnbwilson/" rel="noreferrer"
                            target="_blank">
@@ -169,7 +195,6 @@
                     </div>
                 </div>
             </section>
-<!--            <img src="assets/images/wireframe.svg" alt="">-->
 
             <footer id="footer" class="d-flex justify-content-center">
                 <div class="d-flex align-items-center">
@@ -187,6 +212,7 @@
         crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+<script src="assets/js/svg.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
