added description to the projects array objects. appended project desc to the html list item for each project

--- a/index.html
+++ b/index.html
@@ -156,20 +156,21 @@
             <div class="portfolio-container">
                 <ul>
                     <!-- Portfolio Item 1 -->
-                    <li class="svg-container">
-<!--                        sandlot connect svg here-->
-                        <p>Project Name: Sandlot Connect
+<!--                    <li class="svg-container">-->
+<!--&lt;!&ndash;                        sandlot connect svg here&ndash;&gt;-->
+<!--                        <p>Project Name: Sandlot Connect-->
 
-                            Sandlot Connect is a social media platform inspired by the grassroots resurgence of sandlot baseball across Texas and beyond. Within this web application, users can create a new baseball team or request to join an existing team. When a user creates a new team they have access to requests and can approve or dismiss requests to join the team. Once on a team, members have a private space where they can make a post and communicate with group members. The application is built using Java and Spring Boot on the back-end, with Thymeleaf for the front-end.</p>
-                    </li>
-                    <!-- Portfolio Item 2 -->
-                    <li class="svg-container">
-<!--                        movie project svg here-->
-                    </li>
-                    <!-- Portfolio Item 3 -->
-                    <li class="svg-container">
-<!--                        weather map svg here-->
-                    </li>
+<!--                            Sandlot Connect is a social media platform inspired by the grassroots resurgence of sandlot baseball across Texas and beyond. Within this web application, users can create a new baseball team or request to join an existing team. When a user creates a new team they have access to requests and can approve or dismiss requests to join the team. Once on a team, members have a private space where they can make a post and communicate with group members. The application is built using Java and Spring Boot on the back-end, with Thymeleaf for the front-end.-->
+<!--                        </p>-->
+<!--                    </li>-->
+<!--                    &lt;!&ndash; Portfolio Item 2 &ndash;&gt;-->
+<!--                    <li class="svg-container">-->
+<!--&lt;!&ndash;                        movie project svg here&ndash;&gt;-->
+<!--                    </li>-->
+<!--                    &lt;!&ndash; Portfolio Item 3 &ndash;&gt;-->
+<!--                    <li class="svg-container">-->
+<!--&lt;!&ndash;                        weather map svg here&ndash;&gt;-->
+<!--                    </li>-->
                 </ul>
             </div>
 
