--- a/index.html
+++ b/index.html
@@ -67,112 +67,18 @@
                            data-bs-placement="bottom"></i>
                     </div>
                 </div>
-<!--                <div class="scroll-down">-->
-<!--                    <a class="arrow-container" href="#contact">-->
-<!--                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>-->
-<!--                    </a>-->
-<!--                </div>-->
             </section>
 
-<!--            <section id="portfolio" class="parent">-->
-<!--                <div class="container container-background p-4 mb-5">-->
-<!--                    <h1 class="text-center mb-4">Portfolio</h1>-->
-<!--                    <div class="row portfolio-items-container">-->
-<!--                        &lt;!&ndash; Portfolio item 1 &ndash;&gt;-->
-<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
-<!--                            <article class="item">-->
-<!--                                <h3>Sandlot Connect</h3>-->
-<!--                                <div class="h-100 pb-5">-->
-<!--                                    <a href="#" class="image">-->
-<!--                                        <img class="h-100" src="assets/images/sandlot_connect.JPG"-->
-<!--                                             alt="Sandlot Connect Capstone Project"></a>-->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
-<!--                                <div class="portfolio-info" style="display:none;">-->
-<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
-<!--                                    earum esse-->
-<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
-<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
-<!--                                    <br>-->
-<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
-<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
-<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
-<!--                                </div>-->
-<!--                            </article>-->
-<!--                        </div>-->
-<!--                        &lt;!&ndash; Portfolio item 2 &ndash;&gt;-->
-<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
-<!--                            <article class="item">-->
-<!--                                <h3>Movie Project</h3>-->
-<!--                                <div class="h-100 pb-5">-->
-<!--                                    <a href="#" class="image">-->
-<!--                                        <img class="h-100" src="assets/images/movie_project.jpeg"-->
-<!--                                             alt="Movie Project Pair Programming"></a>-->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
-<!--                                <div class="portfolio-info" style="display:none;">-->
-<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
-<!--                                    earum esse-->
-<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
-<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
-<!--                                    <br>-->
-<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
-<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
-<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
-<!--                                </div>-->
-<!--                            </article>-->
-<!--                        </div>-->
-<!--                        &lt;!&ndash; Portfolio item 3 &ndash;&gt;-->
-<!--                        <div class="col-lg-4 col-md-12 d-flex portfolio-item">-->
-<!--                            <article class="item">-->
-<!--                                <h3>Weather Map</h3>-->
-<!--                                <div class="h-100 pb-5">-->
-<!--                                    <a href="#" class="image">-->
-<!--                                        <img class="h-100" src="assets/images/weather_map.JPG"-->
-<!--                                             alt="Weather Map Solo Project"></a>-->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; Hidden/click to show &ndash;&gt;-->
-<!--                                <div class="portfolio-info" style="display:none;">-->
-<!--                                    Summary: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, deleniti-->
-<!--                                    earum esse-->
-<!--                                    eum illo ipsa itaque magnam minus nam necessitatibus, praesentium quas repellendus-->
-<!--                                    saepe temporibus veniam. Consectetur dolores in repellat?-->
-<!--                                    <br>-->
-<!--                                    Tech: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci-->
-<!--                                    autem commodi cumque delectus eius eligendi excepturi illum, nostrum optio placeat-->
-<!--                                    provident quas quasi quidem quod reiciendis veniam. Odio, vitae.-->
-<!--                                </div>-->
-<!--                            </article>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="scroll-down">-->
-<!--                    <a class="arrow-container" href="#about">-->
-<!--                        <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>-->
-<!--                    </a>-->
-<!--                </div>-->
-<!--            </section>-->
-
-            <div class="portfolio-container">
-                <ul>
-                    <!-- Portfolio Item 1 -->
-<!--                    <li class="svg-container">-->
-<!--&lt;!&ndash;                        sandlot connect svg here&ndash;&gt;-->
-<!--                        <p>Project Name: Sandlot Connect-->
-
-<!--                            Sandlot Connect is a social media platform inspired by the grassroots resurgence of sandlot baseball across Texas and beyond. Within this web application, users can create a new baseball team or request to join an existing team. When a user creates a new team they have access to requests and can approve or dismiss requests to join the team. Once on a team, members have a private space where they can make a post and communicate with group members. The application is built using Java and Spring Boot on the back-end, with Thymeleaf for the front-end.-->
-<!--                        </p>-->
-<!--                    </li>-->
-<!--                    &lt;!&ndash; Portfolio Item 2 &ndash;&gt;-->
-<!--                    <li class="svg-container">-->
-<!--&lt;!&ndash;                        movie project svg here&ndash;&gt;-->
-<!--                    </li>-->
-<!--                    &lt;!&ndash; Portfolio Item 3 &ndash;&gt;-->
-<!--                    <li class="svg-container">-->
-<!--&lt;!&ndash;                        weather map svg here&ndash;&gt;-->
-<!--                    </li>-->
-                </ul>
+            <section id="portfolio" class="parent">
+                <div class="container container-background p-4 mb-5">
+                    <h1 class="text-center m-0">Portfolio</h1>
+                    <div class="portfolio-container">
+                        <ul class="portfolio-items">
+                            <!--Projects array inserted with JS-->
+                        </ul>
+                    </div>
             </div>
+            </section>
 
             <section id="contact" class="parent" style="min-height: 95vh;">
                 <div class="container container-background p-4">
