added media breakpoint for project section

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <div class="container container-background p-4 mb-5">
                     <h1 class="text-center mb-4">About Me</h1>
                     <p class="text-center">Hi, I'm Shawn Wilson.</p>
-                    <p class="indent">
+                    <p class="about-paragraph">
                         As a Software Developer, I'm always eager to learn and take on new challenges. I have a diverse background that has shaped my passion for technology and my approach to problem-solving. Before embarking on my career in software development, I worked as a pharmacy technician in healthcare, which instilled in me the importance of precision, attention to detail, and patient care. While working in healthcare, I pursued my degree in information technology and continued my studies after enlisting in the military.
                     </p>
-                    <p class="indent">
+                    <p class="about-paragraph">
                         After completing my service, I devoted myself to completing my degree in information technology and honing my skills in programming by attending a coding bootcamp. In my portfolio, you can see some of the exciting projects I've created using a variety of technologies. I pride myself on my ability to learn quickly, adapt to new environments, and work collaboratively to create innovative solutions. If you're interested in learning more about my background and experience, please visit the contact section. As someone who values collaboration, communication, and attention to detail, I'm excited to connect with employers who share these values.
                     </p>
                     <div class="icon-container">
@@ -73,8 +73,8 @@
             </section>
 
             <section id="portfolio" class="parent">
-                <div class="container container-background p-4 mb-5">
-                    <h1 class="text-center m-0">Portfolio</h1>
+                <div class="container container-background mb-5 pe-4 ps-4">
+                    <h1 class="portfolio-header text-center pt-4 m-0">My Work</h1>
                     <div class="portfolio-container">
                         <ul class="portfolio-items">
                             <!--Projects array inserted with JS-->
