added noscript tag

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         </ul>
                     </nav>
                 </div>
+                <noscript>
+                    <p>Please enable JavaScript to view this website.</p>
+                </noscript>
                 <div class="scroll-down">
                     <a class="arrow-container" href="#about">
                         <i class="fa-sharp fa-solid fa-arrow-down fa-bounce arrow"></i>
