added new alumni link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <i class="fa-brands fa-square-github icon" title="Github" data-bs-toggle="tooltip"
                                data-bs-placement="bottom"></i>
                         </a>
-                        <a class="text-white" href="https://alumni.codeup.com/students/1770" rel="noreferrer"
+                        <a class="text-white" href="https://alumni.codeup.com/candidate/shawn-wilson/" rel="noreferrer"
                            target="_blank">
                             <i class="fa-solid fa-user-graduate icon" title="Codeup Alumni" data-bs-toggle="tooltip"
                                data-bs-placement="bottom"></i>
