--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <section id="contact" class="parent" style="min-height: 40vh;">
                 <div class="container container-background p-4">
                     <h1 class="text-center mb-4">Contact</h1>
-                    <p>Please reach out to establish a professional connection with me! My most relevant social links are listed below.</p>
+                    <p class="text-center">Please reach out to establish a professional connection with me! My most relevant social links are listed below.</p>
                     <div class="icon-container">
                         <a class="text-white" href="https://www.linkedin.com/in/shawnbwilson/" rel="noreferrer"
                            target="_blank">
